--- a/index.html
+++ b/index.html
@@ -2,21 +2,70 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>First electron app</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
-  <body>
-    <div class="container-fluid">
+  <body class="bg-dark">
+    <div class="container-full-bg">
       <div class="jumbotron">
-        <h1>My App</h1>
+        <h1>Eisenhower Matrix Task Tracker App</h1>
         <form>
-          <input type="text" placeholder="Enter something">
+          <input type="text" placeholder="Enter a task name">
           <input type="submit" value="Go!">
         </form>
+        <hr>
+        <div>
+            <div>
+                <input type="text" placeholder="Please select your file" id="actual-file" disabled="disabled"/>
+                <input type="button" value="Choose a file" id="select-file"/>
+            </div>
+            <br><br>
+            <label for="content-editor">Preview your tasks as text</label><br>
+            <textarea id="content-editor" rows="5"></textarea><br><br>
+            <input type="button" id="save-changes" value="Save changes"/>
+            <input type="button" id="delete-file" value="Delete file"/>
+        </div>
+        <hr>
       </div>
     </div>
   </body>
   <script>
     require('./renderer.js');
+    var remote = require('remote');
+    var dialog = remote.require('dialog');
+    var fs = require('fs');
+
+      document.getElementById('select-file').addEventListener('click',function(){
+          dialog.showOpenDialog(function (fileNames) {
+              if(fileNames === undefined){
+                  console.log("No file selected");
+              }else{
+                  document.getElementById("actual-file").value = fileNames[0];
+                  readFile(fileNames[0]);
+              }
+          });
+      },false);
+
+      document.getElementById('save-changes').addEventListener('click',function(){
+          var actualFilePath = document.getElementById("actual-file").value;
+          if(actualFilePath){
+              saveChanges(actualFilePath,document.getElementById('content-editor').value);
+          }else{
+              alert("Please select a file first");
+          }
+      },false);
+
+      document.getElementById('delete-file').addEventListener('click',function(){
+          var actualFilePath = document.getElementById("actual-file").value;
+          if(actualFilePath){
+              deleteFile(actualFilePath);
+              document.getElementById("actual-file").value = "";
+              document.getElementById("content-editor").value = "";
+          }else{
+              alert("Please select a file first");
+          }
+      },false);
+
   </script>
 </html>
